--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -88,7 +88,7 @@ jobs:
         cd build && ninja
     - uses: actions/upload-artifact@v4
       with:
-        name: aseprite
+        name: aseprite_${{ runner.os }}
         path: |
           if [[ "${{ runner.os }}" == "Windows" ]] ; then
             D:/a/aseprite/aseprite/build/bin/data
