--- a/src/ver/CMakeLists.txt
+++ b/src/ver/CMakeLists.txt
@@ -2,7 +2,7 @@
 # Copyright (C) 2020  Igara Studio S.A.
 
 # Version of Aseprite
-set(VERSION "1.3.11-beta2")
+set(VERSION "1.3.14")
 
 configure_file(
   "${CMAKE_CURRENT_SOURCE_DIR}/generated_version.h.in"
